--- a/index.html
+++ b/index.html
@@ -19,24 +19,41 @@
 
     <!-- JavaScript to Handle Upload -->
     <script>
-        document.getElementById('upload-form').onsubmit = async (event) => {
-            event.preventDefault();
-            const fileInput = document.getElementById('file');
-            const formData = new FormData();
-            formData.append('file', fileInput.files[0]);
+    document.getElementById('upload-form').onsubmit = async (event) => {
+        event.preventDefault(); // Prevent the form from reloading the page
 
-            const response = await fetch('https://ronyates47.pythonanywhere.com/upload', {
+        const fileInput = document.getElementById('file'); // Get the file input element
+        if (!fileInput.files[0]) {
+            alert("Please select a file before uploading.");
+            return;
+        }
+
+        const formData = new FormData();
+        formData.append('file', fileInput.files[0]); // Append the selected file
+
+        try {
+            // Send the file to the upload endpoint of your Render app
+            const response = await fetch('https://genealogy-dataset-explorer.onrender.com/upload', {
                 method: 'POST',
                 body: formData,
             });
 
+            if (!response.ok) {
+                throw new Error(`Server error: ${response.status}`);
+            }
+
             const data = await response.json();
             if (data.error) {
-                alert(data.error);
+                alert(data.error); // Show error message if the server returns an error
             } else {
+                // Display the dataset preview in the container
                 document.getElementById('dataset-container').innerHTML = data.data;
             }
-        };
-    </script>
+        } catch (err) {
+            console.error("Error during file upload:", err);
+            alert("An error occurred while uploading the file. Please try again.");
+        }
+    };
+</script>
 </body>
 </html>
