--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Dataset Explorer</h1>
-    
+
     <!-- File Upload Form -->
     <form id="upload-form">
         <input type="file" name="file" id="file" />
@@ -17,43 +17,69 @@
     <!-- Container for Dataset Preview -->
     <div id="dataset-container"></div>
 
-    <!-- JavaScript to Handle Upload -->
+    <!-- Textarea for User Query -->
+    <textarea id="query" placeholder="Enter your query here..." rows="4" cols="50"></textarea>
+    <button id="query-button">Submit Query</button>
+
+    <!-- Container for Analysis Result -->
+    <h3>Response:</h3>
+    <div id="response"></div>
+
     <script>
-    document.getElementById('upload-form').onsubmit = async (event) => {
-        event.preventDefault(); // Prevent the form from reloading the page
-
-        const fileInput = document.getElementById('file'); // Get the file input element
-        if (!fileInput.files[0]) {
-            alert("Please select a file before uploading.");
-            return;
-        }
-
-        const formData = new FormData();
-        formData.append('file', fileInput.files[0]); // Append the selected file
-
-        try {
-            // Send the file to the upload endpoint of your Render app
-            const response = await fetch('https://genealogy-dataset-explorer.onrender.com/upload', {
-                method: 'POST',
-                body: formData,
-            });
-
-            if (!response.ok) {
-                throw new Error(`Server error: ${response.status}`);
+        document.getElementById('upload-form').onsubmit = async (event) => {
+            event.preventDefault();
+            const fileInput = document.getElementById('file');
+            if (!fileInput.files[0]) {
+                alert("Please select a file before uploading.");
+                return;
             }
 
-            const data = await response.json();
-            if (data.error) {
-                alert(data.error); // Show error message if the server returns an error
-            } else {
-                // Display the dataset preview in the container
-                document.getElementById('dataset-container').innerHTML = data.data;
+            const formData = new FormData();
+            formData.append('file', fileInput.files[0]);
+
+            try {
+                const response = await fetch('/upload', {
+                    method: 'POST',
+                    body: formData,
+                });
+
+                const data = await response.json();
+                if (data.error) {
+                    alert(data.error);
+                } else {
+                    document.getElementById('dataset-container').innerHTML = data.data;
+                }
+            } catch (err) {
+                console.error("Error during file upload:", err);
+                alert("An error occurred while uploading the file.");
             }
-        } catch (err) {
-            console.error("Error during file upload:", err);
-            alert("An error occurred while uploading the file. Please try again.");
-        }
-    };
-</script>
+        };
+
+        document.getElementById('query-button').onclick = async () => {
+            const query = document.getElementById('query').value;
+            if (!query) {
+                alert("Please enter a query.");
+                return;
+            }
+
+            try {
+                const response = await fetch('/query', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ query }),
+                });
+
+                const data = await response.json();
+                if (data.error) {
+                    alert(data.error);
+                } else {
+                    document.getElementById('response').innerText = data.analysis;
+                }
+            } catch (err) {
+                console.error("Error during query:", err);
+                alert("An error occurred while processing your query.");
+            }
+        };
+    </script>
 </body>
 </html>
